Fixed collapse

--- a/recipe_site/static/recipe_site/main.css
+++ b/recipe_site/static/recipe_site/main.css
@@ -160,7 +160,7 @@ a.article-title:hover {
     right:-400px;
     height: 100vh;
     width: 400px;
-    background: #333;
+    background: #ffffff;
     transition: right 0.3s ease-in-out;
     z-index: 300;
 }
@@ -225,3 +225,11 @@ a.article-title:hover {
     top:100px;
     right:0px;
     overflow: scroll;}
+
+.counter {
+
+}
+
+.forcollapse{
+
+}
